--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -103,11 +103,12 @@ body{
 }
 
 .brand img{
-  height:34px;
+  max-height:40px;
   width:auto;
+  height:auto;
   display:block;
+  object-fit:contain;
 }
-
 .nav{
   display:flex;
   flex-direction:column;
