--- a/ui/customer/incidents.html
+++ b/ui/customer/incidents.html
@@ -93,7 +93,8 @@ tbody td{padding:14px;border-bottom:1px solid var(--border);}
         <p>US Signal</p>
       </div>
 
-      <div class="actions">
+    <div class="actions">
+
   <a 
     href="https://status.webex.com/incident/history?lang=en_US" 
     target="_blank" 
@@ -104,8 +105,13 @@ tbody td{padding:14px;border-bottom:1px solid var(--border);}
     Webex Maintenance
   </a>
 
+  <span id="timerLabel" class="autoTimer">
+    Auto refresh in 60s
+  </span>
+
   <button id="btnTheme" class="btn" type="button">Toggle Theme</button>
   <button id="btnRefresh" class="btn primary" type="button">Refresh</button>
+
 </div>
 </div>
 
