--- a/ui/customer/incidents.html
+++ b/ui/customer/incidents.html
@@ -255,11 +255,21 @@ function render(){
     <tr id="${id}" class="detailRow">
       <td colspan="7">
         <div class="detailCard">
-          ${(i.updates||[]).map(u=>`
-            <div class="timelineItem">
-              <strong>${u.status}</strong>
-              ${u.body}
-            </div>`).join("")}
+          ${(i.updates || [])
+  .sort((a,b)=> new Date(b.created_at) - new Date(a.created_at))
+  .map(u=>`
+    <div class="timelineItem">
+      <strong>${(u.status || "").toUpperCase()}</strong>
+      <div style="margin-top:6px;">
+        ${u.body_html || u.body || ""}
+      </div>
+      <div style="font-size:12px;color:#64748b;margin-top:6px;">
+        ${u.created_at ? new Date(u.created_at).toLocaleString() : ""}
+      </div>
+    </div>
+  `)
+  .join("")
+}
           <button class="btn primary" onclick="openModal(event)">Email Update</button>
         </div>
       </td>
