--- a/ui/customer/incidents.html
+++ b/ui/customer/incidents.html
@@ -34,7 +34,13 @@ html[data-theme="dark"]{
 *{box-sizing:border-box;font-family:system-ui;}
 body{margin:0;background:var(--bg);color:var(--text);display:flex;min-height:100vh;}
 .sidebar{width:230px;background:var(--sidebar);border-right:1px solid var(--border);padding:24px;}
-.sidebar img{width:160px;margin-bottom:30px;}
+.sidebar img{
+  max-height:40px;
+  width:auto;
+  height:auto;
+  display:block;
+  object-fit:contain;
+}
 .nav-link{display:block;padding:10px 12px;border-radius:8px;text-decoration:none;color:var(--text);font-weight:600;margin-bottom:8px;}
 .nav-link:hover{background:var(--rowHover);}
 .main{flex:1;display:flex;flex-direction:column;}
